# relay-rook

./: .gitignore  README.md  flake.nix  relay-rook.cabal  schema.sql  tuntun.nix
app/: Main.hs
attic/python-prototype/: pyproject.toml  schema.sql
attic/python-prototype/src/relay_rook/: __init__.py  __main__.py  adapters.py  core.py  program.py  server.py
attic/python-prototype/tests/: test_fen.py  test_program.py  test_sqlite_store.py
ble/: Cargo.toml
ble/src/: ble.rs  chessnut.rs  main.rs  wire.rs
extension/: manifest.json
extension/popup/: popup.html  popup.js
extension/src/: background.js  boardParser.js  content.js
migrations/relay_rook/: 001_init.sql
nix/: ble.nix  home-manager.nix  package.nix
scripts/: preflight.sh
src/RelayRook/: Adapters.hs  Core.hs  Effects.hs  Migrate.hs  Program.hs  Schema.hs  Server.hs
src/RelayRook/Board/: Codec.hs  Protocol.hs  Wire.hs
test/RelayRook/: CoreSpec.hs  ProgramSpec.hs
