[package]
name = "relay-rook-ble"
version = "0.1.0"
edition = "2021"
description = "BLE daemon for Chessnut Move boards. Talks Unix-socket JSON to relay-rook (Haskell)."

[lints.rust]
unsafe_code = "forbid"

[dependencies]
anyhow      = "1"
base64      = "0.22"
btleplug    = "0.11"
clap        = { version = "4", features = ["derive", "env"] }
futures     = "0.3"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "sync", "time"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid        = "1"

[[bin]]
name = "relay-rook-ble"
path = "src/main.rs"
