[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "relay-rook"
version = "0.1.0"
description = "Bridge between Chessable web and a Chessnut Move robotic chess board."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
relay-rook = "relay_rook.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/relay_rook"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
